--- a/work_blog/templates/blog_list.html
+++ b/work_blog/templates/blog_list.html
@@ -12,166 +12,177 @@
 
 {% block content %}
     <div id="blog_list_container" class="container">
-        <div class="raw">
-            <div class="col-xs-12 col-sm-8 col-md-9 col-lg-9">
-                <div id="panel_left" class="panel panel-info">
-                    <div class="panel-heading">
-                        {% block blog_list_title %}博客列表{% endblock blog_list_title %}
-                    </div>
-                    {% block type_list %}
-                        <div class="panel-body">
-                         {% for blog in page_of_blogs.object_list %}
-                            <div class="blog">
-                                <h3>
-                                    <a href="{% url 'blog:blog_detail' blog.id %}">{{ blog.title }}</a>
-                                </h3>
-                                {% if request.user.is_superuser %}
-                                    <p>{{ blog.content|striptags|safe|truncatechars:100 }}&nbsp;
-                                        <a href="/admin/blog/blog/{{ blog.id }}/change/" target="_blank" style="text-decoration:underline;">编辑</a>
-                                    </p>
-                                {% else %}
-                                    <p>{{ blog.content|striptags|safe|truncatechars:100 }}&nbsp;</p>
-                                {% endif %}
-                                <br>
-                                <p class="blog-info">
-                                    <!-- 图标引用 -->
-                                    <span class="glyphicon glyphicon-tag" title="分类"></span><a href="{% url 'blog:blogs_type' blog.blog_type.id %}">
-                                    {{ blog.blog_type.type_name }}</a>
-                                    &nbsp;
-                                    <span class="glyphicon glyphicon-time" title="发布时间"></span>&nbsp;{{ blog.create_time|date:"Y-m-d" }}
-                                    &nbsp;
-                                    <span class="glyphicon glyphicon-eye-open" title="阅读数"></span>({{ blog.get_blog_readnum }})
-                                    &nbsp;
-                                    <span class="glyphicon glyphicon-comment" title="评论数"></span>({% get_comment_count blog %})
-                                    &nbsp;
-                                    <span class="glyphicon glyphicon-thumbs-up" title="点赞数"></span>({% get_liked_num blog %})
-                                    <!-- 图标引用 -->
-                                </p>
-                            </div>
-                        {% empty %}
-                            <div class="blog">
-                                <p>暂无博客，敬请期待...</p>
-                            </div>
-                        {% endfor %}
-                    </div>
-                    {% endblock type_list %}
-                </div>
+        <!-- 代码块 -->
+        {% block blog_list_left %}
+            <div class="raw">
 
-                <!-- 分页显示 -->
-                <div class="paginator" aria-label="Page navigation">
-                    <ul class="pagination">
-                        <!-- 前一页 -->
-                        <li>
-                            {% if page_of_blogs.has_previous %}
-                                <a href="?page={{ page_of_blogs.previous_page_number }}" aria-label="Previous">
-                                    <span aria-hidden="true">&laquo;</span>
-                                </a>
-                            {% else %}
-                                <span aria-hidden="true">&laquo;</span>
-                            {% endif %}
-                        </li>
-                        <!-- 全部页码 -->
-                        {% for page_num in page_range %}
-                            {% if page_num  %}
-                                {% ifequal page_num page_of_blogs.number %}
-                                    <li class="active"><span>{{ page_num }}</span></li>
+                <div class="col-xs-12 col-sm-8 col-md-9 col-lg-9">
+                    <div id="panel_left" class="panel panel-info">
+                        <div class="panel-heading">
+                            {% block blog_list_title %}博客列表{% endblock blog_list_title %}
+                        </div>
+                        {% block type_list %}
+                            <div class="panel-body">
+                                {% for blog in page_of_blogs.object_list %}
+                                    <div class="blog">
+                                        <h3>
+                                            <a href="{% url 'blog:blog_detail' blog.id %}">{{ blog.title }}</a>
+                                        </h3>
+                                        {% if request.user.is_superuser %}
+                                            <p>{{ blog.content|striptags|safe|truncatechars:100 }}&nbsp;
+                                                <a href="/admin/blog/blog/{{ blog.id }}/change/" target="_blank"
+                                                   style="text-decoration:underline;">编辑</a>
+                                            </p>
+                                        {% else %}
+                                            <p>{{ blog.content|striptags|safe|truncatechars:100 }}&nbsp;</p>
+                                        {% endif %}
+                                        <br>
+                                        <p class="blog-info">
+                                            <!-- 图标引用 -->
+                                            <span class="glyphicon glyphicon-tag" title="分类"></span><a
+                                                href="{% url 'blog:blogs_type' blog.blog_type.id %}">
+                                            {{ blog.blog_type.type_name }}</a>
+                                            &nbsp;
+                                            <span class="glyphicon glyphicon-time"
+                                                  title="发布时间"></span>&nbsp;{{ blog.create_time|date:"Y-m-d" }}
+                                            &nbsp;
+                                            <span class="glyphicon glyphicon-eye-open"
+                                                  title="阅读数"></span>({{ blog.get_blog_readnum }})
+                                            &nbsp;
+                                            <span class="glyphicon glyphicon-comment"
+                                                  title="评论数"></span>({% get_comment_count blog %})
+                                            &nbsp;
+                                            <span class="glyphicon glyphicon-thumbs-up"
+                                                  title="点赞数"></span>({% get_liked_num blog %})
+                                            <!-- 图标引用 -->
+                                        </p>
+                                    </div>
+                                {% empty %}
+                                    <div class="blog">
+                                        <p>暂无博客，敬请期待...</p>
+                                    </div>
+                                {% endfor %}
+                            </div>
+                        {% endblock type_list %}
+                    </div>
+
+                    <!-- 分页显示 -->
+                    <div class="paginator" aria-label="Page navigation">
+                        <ul class="pagination">
+                            <!-- 前一页 -->
+                            <li>
+                                {% if page_of_blogs.has_previous %}
+                                    <a href="?page={{ page_of_blogs.previous_page_number }}" aria-label="Previous">
+                                        <span aria-hidden="true">&laquo;</span>
+                                    </a>
                                 {% else %}
-                                    {% if page_num == '...' %}
-                                        <li><span>{{ page_num }}</span></li>
+                                    <span aria-hidden="true">&laquo;</span>
+                                {% endif %}
+                            </li>
+                            <!-- 全部页码 -->
+                            {% for page_num in page_range %}
+                                {% if page_num %}
+                                    {% ifequal page_num page_of_blogs.number %}
+                                        <li class="active"><span>{{ page_num }}</span></li>
                                     {% else %}
-                                        <li><a href="?page={{ page_num }}">{{ page_num }}</a></li>
-                                    {% endif %}
-                                {% endifequal %}
-                            {% endif %}
-                            
-                        {% endfor %}
-                        <!-- 后一页 -->
-                        <li>
-                            {% if page_of_blogs.has_next %}
-                                <a href="?page={{ page_of_blogs.next_page_number }}" aria-label="Next">
+                                        {% if page_num == '...' %}
+                                            <li><span>{{ page_num }}</span></li>
+                                        {% else %}
+                                            <li><a href="?page={{ page_num }}">{{ page_num }}</a></li>
+                                        {% endif %}
+                                    {% endifequal %}
+                                {% endif %}
+
+                            {% endfor %}
+                            <!-- 后一页 -->
+                            <li>
+                                {% if page_of_blogs.has_next %}
+                                    <a href="?page={{ page_of_blogs.next_page_number }}" aria-label="Next">
+                                        <span aria-hidden="true">&raquo;</span>
+                                    </a>
+                                {% else %}
                                     <span aria-hidden="true">&raquo;</span>
-                                </a>
-                            {% else %}
-                                <span aria-hidden="true">&raquo;</span>
-                            {% endif %}
-                        </li>
-                    </ul>
-                    <p>
-                        共有{{ page_of_blogs.paginator.count }}篇博客，
-                        当前您在第{{ page_of_blogs.number }}页，总共有{{ page_of_blogs.paginator.num_pages }}页。
-                    </p>
+                                {% endif %}
+                            </li>
+                        </ul>
+                        <p>
+                            共有{{ page_of_blogs.paginator.count }}篇博客，
+                            当前您在第{{ page_of_blogs.number }}页，总共有{{ page_of_blogs.paginator.num_pages }}页。
+                        </p>
+                    </div>
+                    <!-- 分页显示 -->
+
                 </div>
-                <!-- 分页显示 --> 
-                
-            </div>
-            <div class="col-xs-12 col-sm-4 col-md-3 col-lg-3">
-            <!--博客分类-->
-                <div id="panel-right" class="panel panel-info">
-                    <div class="panel-heading">
-                        <span style="color: black">博客分类</span>
-                        <span style="float: right">
+                <div class="col-xs-12 col-sm-4 col-md-3 col-lg-3">
+                    <!--博客分类-->
+                    <div id="panel-right" class="panel panel-info">
+                        <div class="panel-heading">
+                            <span style="color: black">博客分类</span>
+                            <span style="float: right">
                             <a href="{% url 'blog:all_types' %}">更多>>></a>
                         </span>
+                        </div>
+                        <div class="panel-body">
+                            <ul class="blog-types">
+                                {% for blog_type in blog_types %}
+                                    <li class="panel-detail">
+                                        <a href="{% url 'blog:blogs_type' blog_type.id %}">
+                                            {{ blog_type.type_name }}({{ blog_type.blog_set.count }}篇)
+                                        </a>
+                                    </li>
+                                {% empty %}
+                                    <li>暂无分类</li>
+                                {% endfor %}
+                            </ul>
+                        </div>
                     </div>
-                    <div class="panel-body">
-                        <ul class="blog-types">
-                            {% for blog_type in blog_types %}
-                                <li class="panel-detail">
-                                    <a href="{% url 'blog:blogs_type' blog_type.id %}">
-                                        {{ blog_type.type_name }}({{ blog_type.blog_set.count }}篇)
-                                    </a>
-                                </li>
-                            {% empty %}
-                                <li>暂无分类</li>
-                            {% endfor %}
-                        </ul>
-                    </div>
-                </div>
-            <!--日期归档-->
-                <div class="panel panel-info">
-                    <div class="panel-heading">
-                        <span style="color: black;">日期归档</span>
-                        <span style="float: right">
+                    <!--日期归档-->
+                    <div class="panel panel-info">
+                        <div class="panel-heading">
+                            <span style="color: black;">日期归档</span>
+                            <span style="float: right">
                             <a href="{% url 'blog:all_types' %}">更多>>></a>
                         </span>
+                        </div>
+                        <div class="panel-body">
+                            <ul class="blog-dates">
+                                {% for blog_date, blog_count in blog_dates.items %}
+                                    <li class="panel-detail">
+                                        <a href="{% url 'blog:blogs_by_date' blog_date.year blog_date.month %}">
+                                            {{ blog_date|date:'Y年m月' }}({{ blog_count }}篇)
+                                        </a>
+                                    </li>
+                                {% endfor %}
+                            </ul>
+                        </div>
                     </div>
-                    <div class="panel-body">
-                        <ul class="blog-dates">
-                            {% for blog_date, blog_count in blog_dates.items %}
-                                <li class="panel-detail">
-                                    <a href="{% url 'blog:blogs_by_date' blog_date.year blog_date.month %}">
-                                        {{ blog_date|date:'Y年m月' }}({{ blog_count }}篇)
-                                    </a>
-                                </li>
-                            {% endfor %}
-                        </ul>
-                    </div>
-                </div>
-            <!--标签云-->
-                <div class="panel panel-info">
-                    <div class="panel-heading">
-                        <span style="color: black">标签云</span>
-                        <span style="float: right">
+                    <!--标签云-->
+                    <div class="panel panel-info">
+                        <div class="panel-heading">
+                            <span style="color: black">标签云</span>
+                            <span style="float: right">
                             <a href="{% url 'blog:all_types' %}">更多>>></a>
                         </span>
-                    </div>
-                    <div class="panel-body">
-                        <ul class="blog-tags">
-                            {% for tag in tags %}
-                                <li class="panel-detail">
-                                    <a href="{% url 'blog:blogs_tags' tag.id %}" id="{{ forloop.counter }}"
-                                        title="【{{ tag.name }}】标签下有{{ tag.blog_set.count }}篇博客">
-                                        {{ tag.name }}
-                                    </a>
-                                </li>
-                            {% empty %}
-                                <li>暂无标签</li>
-                            {% endfor %}
-                        </ul>
+                        </div>
+                        <div class="panel-body">
+                            <ul class="blog-tags">
+                                {% for tag in tags %}
+                                    <li class="panel-detail">
+                                        <a href="{% url 'blog:blogs_tags' tag.id %}" id="{{ forloop.counter }}"
+                                           title="【{{ tag.name }}】标签下有{{ tag.blog_set.count }}篇博客">
+                                            {{ tag.name }}
+                                        </a>
+                                    </li>
+                                {% empty %}
+                                    <li>暂无标签</li>
+                                {% endfor %}
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        {% endblock blog_list_left %}
+        <!-- 代码块 -->
     </div>
     
 {% endblock content %}
