--- a/work_blog/templates/blog_detail.html
+++ b/work_blog/templates/blog_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load staticfiles %}
+{% load static %}
 {% load comment_tags %}
 {% load likes_tags %}
 {% block title %}{{ blog.title }}{% endblock title %}
