--- a/work_blog/templates/search/search.html
+++ b/work_blog/templates/search/search.html
@@ -2,7 +2,7 @@
 {% load highlight %}
 {% load comment_tags %}
 {% load likes_tags %}
-{% load staticfiles %}
+{% load static %}
 
 {% block custom_css %}
     <link rel="stylesheet" type="text/css" href="{% static "search.css" %}">
